--- a/project/admin/style.css
+++ b/project/admin/style.css
@@ -67,6 +67,10 @@ button{
 button:hover{
 	background: #6d44b8;
 }
+button#dropdownMenuButton {
+    position: relative;
+    left: 250px;
+}
 .login{
 	height: 460px;
 	background: #eee;
